--- a/index.html
+++ b/index.html
@@ -255,8 +255,15 @@
             </div>
         </Section>
 
-        <section>
-
+        <section class="Container">
+            <div class="last">
+                <div class="lastline">
+                    <h1>Featured Products at one place </h1>
+                    <p>here you cane find any smart product . just you need to find here</p>
+                    <a class="link-button" target="_blank" href="https://www.linkedin.com/in/0x0j9a10/">Preebook now<i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="lastline"><img src="images/gear.png" alt=""></div>
+            </div>
         </section>
     </main>
     <footer>
